src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__int32__cast_int32_to_oid__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/int32.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: Oid,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: Oid,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        CastOidToInt32(
            CastOidToInt32,
        ),
    ),
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
